--- a/page.html
+++ b/page.html
@@ -26,7 +26,7 @@
 				<!-- navigation -->
 				<nav class="pull-right nav-collapse collapse">
 				<ul id="menu-main" class="nav">
-					<li><a title="team" href="index.html#about">About</a></li>
+					<li><a title="team" href="index.html#about">Inicio</a></li>
 					<li><a title="services" href="index.html#services">Services</a></li>
 					<li><a title="works" href="index.html#works">Works</a></li>
 					<li><a title="blog" href="index.html#blog">Blog</a></li>
@@ -44,7 +44,7 @@
 <div class="container">
 	<div class="row">
 		<div class="span12 aligncenter flyUp">
-			<h2 class="pagetitle">Gestion de Usuario</h2>
+			<h7 class="pagetitle">Gestion de Usuario</h7>
 		</div>
 	</div>
 </div>
