--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 				<nav class="pull-right nav-collapse collapse">
 				<ul id="menu-main" class="nav">
 					<li><a title="Gestion" href="#gestion">Gestion de datos</a></li>
-					<li><a href="php/login.php">Iniciar Sesion</a></li>
+					<li><a href="login.html">Iniciar Sesion</a></li>
 					<li><a title="works" href="#works">Works</a></li>
 					<li><a title="blog" href="#blog">Blog</a></li>
 					<li><a title="contacto" href="#contacto">Contacto</a></li>
 					<li><a href="page.html">Page</a></li>
+					<li><a href="Camaras.html">Camaras</a></li>
 				</ul>
 				</nav>
 			</div>
