--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@ include('php/login.php');
 </div>
 </section>
 
-<form method="post" action="">
+<form class="sinput" method="post" action="">
 									<p> Email o Usuario</p>
 									<input type="text" name="usuario"/> 
 									<p> password</p>
