--- a/page.html
+++ b/page.html
@@ -63,9 +63,10 @@
 							</ul>
 							<div class="tab-content">
 								<div class="tab-pane active" id="one">
-								<form method="post" action="">
+								
+								<form class="sinput" method="post" action="">
 									<p> Nombre</p>
-									<input type="text" name="nombre"/> 
+									<input class="sinput" type="text" name="nombre"/> 
 									<p> Apellido</p>
 									<input type="text" name="apellido"/>
 									<p> DNI</p>
