--- a/camaras.html
+++ b/camaras.html
@@ -26,7 +26,7 @@
 				<!-- navigation -->
 				<nav class="pull-right nav-collapse collapse">
 				<ul id="menu-main" class="nav">
-					<li><a title="team" href="index.html#about">Inicio</a></li>
+					<li><a title="team" href="index.html">Inicio</a></li>
 					<li><a title="services" href="index.html#services">Services</a></li>
 					<li><a title="works" href="index.html#works">Works</a></li>
 					<li><a title="blog" href="index.html#blog">Blog</a></li>
