--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 	<div class="row">
 		<div id="filters" class="span12">
 			<ul class="clearfix">
+			<!--
 				<li><a href="#" data-filter="*" class="active">
 				<h5>All</h5>
 				</a></li>
@@ -227,6 +228,22 @@
 				<li><a href="#" data-filter=".photography">
 				<h5>Photography</h5>
 				</a></li>
+				-->
+				<li><a href="#" target="muestrario" class="active">
+				<h5>Registrar Usuario</h5>
+				</a></li>
+				<li><a href="php/reservas.php" >
+				<h5>Reservas</h5>
+				</a></li>
+				<li><a href="#" >
+				<h5>Registro de vehículos</h5>
+				</a></li>
+				<li><a href="#">
+				<h5>Gestión de estacionamientos</h5>
+				</a></li>
+				<li><a href="#">
+				<h5>Photography</h5>
+				</a></li>
 			</ul>
 		</div>
 		<!-- END PORTFOLIO FILTERING -->
@@ -234,7 +251,7 @@
 	<div class="row">
 		<div class="span12">
 			<div id="portfolio-wrap">
-				<!-- portfolio item -->
+				<!-- portfolio item
 				<div class="portfolio-item grid print photography">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -248,8 +265,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid print design web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -263,8 +278,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid print design">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -278,8 +291,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid photography web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -293,8 +304,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid photography web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -308,8 +317,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid photography web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -323,8 +330,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid photography web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -338,8 +343,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid photography">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -353,8 +356,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid photography web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -368,8 +369,6 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
-				<!-- portfolio item -->
 				<div class="portfolio-item grid design web">
 					<div class="portfolio">
 						<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
@@ -383,7 +382,11 @@
 						</a>
 					</div>
 				</div>
-				<!-- end portfolio item -->
+				-->
+				<!--Con esto mostramos las diferentes secciones de alta-->
+				<iframe name="muestrario" scrolling="auto" width="620px" height="930px" frameborder="0" src="php/reservas.php"></iframe>
+
+				
 			</div>
 		</div>
 	</div>
