arreglos css parte reservas

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
 		</div>
 		<!-- END PORTFOLIO FILTERING -->
 	</div>
-	<div class="row">
+	<!--<div class="row">
 		<div class="span12">
-			<div id="portfolio-wrap">
+			<div id="portfolio-wrap">-->
 				<!-- portfolio item
 				<div class="portfolio-item grid print photography">
 					<div class="portfolio">
@@ -384,12 +384,12 @@
 				</div>
 				-->
 				<!--Con esto mostramos las diferentes secciones de alta-->
-				<iframe name="muestrario" scrolling="auto" width="620px" height="930px" frameborder="0" src="php/reservas.php"></iframe>
+				<iframe name="muestrario" scrolling="auto" width="900px" height="630px" frameborder="0" src="php/reservas.php"></iframe>
 
 				
-			</div>
+			<!--</div>
 		</div>
-	</div>
+	</div>-->
 </div>
 </section>
 <!-- spacer section -->
