Cambios Reservas Diseño 2.1

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 				</div>
 				-->
 				<!--Con esto mostramos las diferentes secciones de alta-->
-				<iframe name="muestrario" scrolling="auto" width="900px" height="630px" frameborder="0" src="php/reservas.php"></iframe>
+				<center><iframe name="muestrario" scrolling="auto" width="810px" style="margin: 0 auto; position: relative;" height="630px" frameborder="0" src="php/reservas.php"></iframe></center>
 
 				
 			<!--</div>
