--- a/login.html
+++ b/login.html
@@ -54,13 +54,13 @@ include('php/login.php');
 </section>
 
 <form class="sinput" method="post" action="">
-									<p> Email o Usuario</p>
-									<input type="text" name="usuario"/> 
-									<p> password</p>
-									<input type="text" name="pass"/>
+	<p> Usuario</p>
+	<input type="text" name="usuario" placeholder="Ingrese Usuario"/> 
+	<p> password</p>
+	<input type="text" name="pass" placeholder="Ingrese Contraseña"/>
+	<input type="submit" name="ingreso" value="Ingresar" />
+	<input type="submit" name="registrar" value="registrarse" />
 									
-									<tr></tr>
-									<input type="submit" name="submit" value="Ingreso" />
 </form>		
 					
 </section>
