--- a/login.html
+++ b/login.html
@@ -55,9 +55,9 @@ include('php/login.php');
 
 <form class="sinput" method="post" action="">
 	<p> Usuario</p>
-	<input type="text" name="usuario" placeholder="Ingrese Usuario"/> 
-	<p> password</p>
-	<input type="text" name="pass" placeholder="Ingrese Contraseña"/>
+	<input type="text" name="usuario" placeholder="Ingrese Usuario" requiered=""/> 
+	<p> Contraseña</p>
+	<input type="text" name="pass" placeholder="Ingrese Contraseña" requiered=""/>
 	</br>
 	<input type="submit" name="ingreso" value="Ingresar" />
 	<input type="submit" name="registrar" value="registrarse" />
